margins on smaller devices corrected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,7 +202,7 @@ ul.social-media-links li:hover {
 
     nav ul {
       justify-content: center;
-      margin-right: 5px;
+      margin-right: 15px;
     }
 
     nav li {
@@ -226,15 +226,7 @@ ul.social-media-links li:hover {
        transform: translate3D(0, -4px, 0); 
     }
 
-    .smdevice-sect1-margin-p2 {
-       margin-top: 8vh;
-    }
-
-    .smdevice-sect2-margin-dialcenter-pict {
-       margin-top: 10vh;
-    }
-
-    .smdevice-sect3-margin-form-adres {
+      .smdevice-sect3-margin-form-adres {
        margin-top: 12vh;
     }
 
@@ -265,6 +257,14 @@ ul.social-media-links li:hover {
     .nav-text {
        font-size: 15px;
        font-weight: 400; 
+    }
+
+      .smdevice-sect1-margin-p2 {
+       margin-top: 8vh;
+    }
+
+    .smdevice-sect2-margin-dialcenter-pict {
+       margin-top: 10vh;
     }
 
     #carousel-second {
